# rktohidemo

./: .gitignore  CMakeLists.txt  LICENSE.TXT  README.md
assets/: effect_manifest.json
assets/eis/: eis_shaky_640x360.h264
assets/npu/: deepnir_10fruit_labels.txt  gdut_hwd_helmet_labels.txt
assets/panorama/: calib_file.pto
assets/svm3d/: array1  array11  array12  array2  array21  array22  array3  array31  array32  array4  array41  array42  svm_3d_assets.json
docs/AI团队/: srs_status.yaml
docs/缺陷报告/: DEFECT-CUSTOMER-DEMO-20260519-001-vmix-flicker.md  DEFECT-CUSTOMER-DEMO-20260519-002-osd-page-clutter.md  DEFECT-CUSTOMER-DEMO-20260519-003-rga-page-early-switch.md  DEFECT-CUSTOMER-DEMO-20260519-004-csc-cl-page-too-small.md  DEFECT-CUSTOMER-DEMO-20260519-005-layout-inconsistency.md  DEFECT-CUSTOMER-DEMO-20260519-006-data-flow-not-clear.md  DEFECT-CUSTOMER-DEMO-20260519-007-realtime-compare-layout-inconsistent.md  DEFECT-CUSTOMER-DEMO-20260519-008-data-flow-still-ambiguous.md  DEFECT-CUSTOMER-DEMO-20260519-009-osd-single-live-view-not-1080-wide.md  DEFECT-CUSTOMER-DEMO-20260519-010-rga-resize-rga-single-view-not-1080-wide.md  DEFECT-CUSTOMER-DEMO-20260519-011-cap-dehaze-should-process-before-resize.md  INDEX.md
docs/问题记录/: 20260518-1330-vmix-osd-output-pool-held-by-vo-on-int-shutdown.md  20260518-1330-vo-wbc-attr-field-drift-after-rktohi-sync.md  20260518-1414-resize-rga-bind-input-width-inferred-from-crop.md  20260518-1610-csc-cl-argb-dma-buf-cannot-be-reimported-by-second-gpu-stage.md  20260518-1627-clahe-bind-page-fails-when-opencl-output-feeds-vmix-opencl.md  20260518-1634-retinex-bind-page-fails-when-egl-context-is-not-shared-and-vmix-.md  20260518-1641-cap-dehaze-customer-page-needed-capture-logs-and-shutdown-drain.md  20260518-1706-conv-cl-four-live-groups-fail-eglimage-import-in-one-process.md  20260518-1719-transform-bind-page-holds-display-output-pools-on-shutdown.md  20260518-1727-thermal-page-per-frame-redraw-misses-short-run-capture.md  20260518-1736-edof-cl-customer-page-stalls-shutdown-with-live-opencl-and-redra.md  20260518-1750-pano-customer-page-hangs-cleanup-with-live-worker-and-full-domai.md  20260518-1806-display-vmix-output-pool-retained-one-buffer-on-page-shutdown.md  20260519-0800-wbc-h264-recorder-stops-at-3000-frames-without-license.md  20260519-0800-wbc-h264-recorder-venc-pool-exceeds-media-memory-limit.md  20260519-0927-vi-4k-bind-page-vo-capture-has-no-output-frame.md  20260519-0933-vi-4k-input-bind-path-has-no-screen-output.md  20260519-1127-dcp-fast-dehaze-4k-input-lacks-downstream-frame-flow.md  20260519-1127-stereo-3d-4k-input-has-no-merged-frame-flow.md  20260519-1157-4k-camera-rga-resize-rga-crop-alignment-failures.md  20260519-1907-vmix-four-input-page-flickers-because-every-input-independently-.md  20260519-1918-transform-four-way-4k-demo-stalls-perspective-mode.md  20260523-1805-eis-vdec-demo-must-drain-outputs-before-media-sys-exit.md  20260523-1805-eis-vdec-demo-vdec-pool-size-must-match-mpp-info-change.md  20260525-0844-vi-eis-vpss-osd-vo-demo-vpss-output-width-alignment.md  20260526-1138-npu-standalone-vdec-pool-and-rgb-drain.md  20260526-1145-eis-standalone-vmix-compare-holds-eis-output-pool.md  20260526-1310-short-overlay-probes-left-alldemo-processes-after-timeout.md  20260526-1330-clahe-bind-path-uses-output-port-not-output0.md  20260526-1333-retinex-live-page-duplicate-symbol-with-offline-file.md  20260526-1342-cap-dcp-live-dehaze-bind-port-is-input.md  20260526-1342-dcp-live-dehaze-1280x720-backpressure-exhausts-csc-output.md  20260526-1342-vi-1920x1080-nv12-capture-needs-3840-stride.md  20260526-1619-media-vi-getframe-reads-wrong-vi-output-port.md  INDEX.md  (+4 more)
include/: media_api.h
lib/: libEGL.so.1  libc.so.6  libcrypto.so.1.1  libgbm.so.1  libmali-hook.so.1  libpng16.so.16  librga.so.2  librockchip_mpp.so.1
recordings/: cap_dehaze_offline_wbc_20260520_134328.h264
scripts/: capture_page_screens.sh  check_fruit_deepnir_demo.sh  check_helmet_detect_demo.sh  generate_tnr_zone_noise_chart.py  run_alldemo.sh
src/: alldemo.c
tools/: h264_transcode_min.c  wbc_h264_record.c
(+321 files in other folders)
